ANW-2168 Fix PUI a11y errors via Wave
Color contrast: override Bootstrap
Empty button: add i18n text
Form labels: adjust markup
Fix frontend file versions Softserv layout bug

--- a/public/app/assets/stylesheets/archivesspace/bootstrap-overrides.scss
+++ b/public/app/assets/stylesheets/archivesspace/bootstrap-overrides.scss
@@ -37,3 +37,17 @@
   color: $body-color;
   background-color: var(--light);
 }
+
+.btn-primary {
+  background-color: $primary-color;
+  border-color: $primary-color;
+}
+
+.page-link {
+  color: $primary-color;
+}
+
+.page-item.active .page-link {
+  background-color: $primary-color;
+  border-color: $primary-color;
+}
